--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,174 @@
 
 /*Jeg bruger font-face til at finde fontén på computeren*/
 @font-face {
-    font-family: "questrial";
-    src: url("/fonts/gills_sv/GillSans-Light.ttf");
+    font-family: 'Roboto, sans-serif;
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+    /***********************************************/
+/***************** Sidelayout ******************/
+
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
+* {
+    box-sizing: border-box;
+}
+/***********************************************/
+/***************** mobil nav *******************/
+
+/*Jeg bruger flex til at bestemme retningen for min navbar og centerer den derefter*/
+#menu {
+    /* placering af menu (Gør så vi kan placere navbaren i forhold til browser)*/
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: -100%;
+    width: 100%;
+    background-color: white;
+    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* vi løfter menuen over andet content*/
+    z-index: 5;
+    /* menubaren animeres ind*/
+    transition: left 0.3s linear;
+}
+
+/*Denne style bliver brugt når der er #menu i url'en. Det bruger vi til at vise navbaren, når vi trykker på "åben navbar" ikonet*/
+#menu:target {
+    left: 0;
+}
+
+/*Jeg fjerner punkterne fra listen*/
+#menuPunkter {
+    list-style: none;
+    padding: 0;
+    margin-top: 30px;
+    color: #f2cbd9;
+    text-decoration: none;
+    /*Flex bruges til at ligge links under hinanden og centere dem*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/*Jeg adskiller mine menupunkter lidt*/
+#menuPunkter a {
+    font-size: 25px;
+    font-family: "Baskervville", serif;
+    display: block;
+    margin: 10px;
+    padding: 10px;
+    /*Jeg fjerner stregen og ændre farven*/
+    color: #f2cbd9;
+    text-decoration: none;
+    text-shadow: 0px 1px 6px #0000001d;
+}
+
+/***********************************************/
+/************ mobil nav knapper ****************/
+
+#closeNav,
+#openNav {
+    /*Gør så vi kan placere krydset i navbaren som vi vil*/
+    position: absolute;
+    top: 40px;
+    text-decoration: none;
+    font-size: 40px;
+    color: black;
+}
+
+/*knapper til åben og luk af navbar*/
+#closeNav {
+    right: 40px;
+}
+#openNav {
+    left: 40px;
+}
+/***********************************************/
+/************ mobil nav logo *******************/
+
+/*logoet i navbaren*/
+#logo {
+    width: 60%;
+    display: block;
+}
+
+/*Jeg giver logoet 100% af forældrens 60%*/
+#logo img {
+    width: 100%;
+}
+
+/***********************************************/
+/*************** mobil topbar ******************/
+
+header {
+    display: flex;
+    justify-content: center;
+    background-color: white;
+}
+
+/*Tilpasning af logo i toppen på mobil*/
+#logoTop,
+#logoTopDesktop {
+    /*Fordi der er et link sætter vi display block for at kunne bruge margin og width*/
+    display: block;
+    width: 45%;
+    background-color: white;
+    max-width: 200px;
+    padding: 10px;
+}
+
+#logoTop img,
+#logoTopDesktop img {
+    width: 100%;
+}
+
+#menuPunkter #logoTopDesktop {
+    display: none;
+}
+
+/***********************************************/
+/********** stylesheet for footer **************/
+.footer {
+    background-color: #39b54a;
+    padding: 10px 20px;
+    text-align: left;
+    background-size: 100%;
+    justify-content: space-between;
+    display: flex;
+}s
+
+#textfooter {
+    display: flex;
+    flex-direction: column;
+}
+
+#socialmedie {
+    display: flex;
+    align-items: center;
+}
+.icons {
+    width: 40px;
+    display: block;
+    margin-left: 10px;
+}
+.icons img {
+    width: 100%;
+}
+p {
+    margin: 5px;
+    font-size: 14px;
+}
+
