--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,32 @@
 
 /*Jeg bruger font-face til at finde fontén på computeren*/
 @font-face {
-    font-family: 'Roboto, sans-serif;
+    font-family: "gill-sans";
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-    /***********************************************/
+}
+/*Jeg giver en font til h1, h2 og h3*/
+h1,
+h2,
+h3 {
+    font-family: "Baskervville", serif;
+}
+
+/*h1 er til banneret på hver side*/
+h1 {
+    background-color: rgba(242, 203, 217, 0.6);
+    width: 100%;
+    text-align: center; /*Centerer teksten*/
+    padding: 15px;
+    margin: 0;
+}
+
+/*Jeg giver en font til body*/
+body {
+    font-family: "gill-sans", sans-serif;
+    margin: 0;
+}
+
+/***********************************************/
 /***************** Sidelayout ******************/
 
 html {
@@ -25,6 +48,7 @@ main {
 * {
     box-sizing: border-box;
 }
+
 /***********************************************/
 /***************** mobil nav *******************/
 
@@ -98,6 +122,7 @@ main {
 #openNav {
     left: 40px;
 }
+
 /***********************************************/
 /************ mobil nav logo *******************/
 
@@ -142,6 +167,110 @@ header {
 }
 
 /***********************************************/
+/********* stylesheet for kontakt **************/
+
+input[type="text"],
+select,
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+    border-color: #f2cbd9;
+}
+
+#indhold {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+/* Style the submit button with a specific background color etc */
+#contactButton {
+    background-color: rgba(188, 206, 216, 0.7);
+    color: black;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+#form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    margin-top: 40px;
+}
+label {
+    color: black;
+}
+
+/***********************************************/
+/************ mobil Landingpage ****************/
+
+/*Jeg laver css specifikt til headeren på vores landingpage*/
+#landingHeader {
+    height: 115px;
+}
+
+#landingHeader #logoTop {
+    /*Logoet ligges ud over header (en del af det ønskede design)*/
+    position: absolute;
+}
+
+#landingMain {
+    /*Bagrundsbilledet ligges ind*/
+    background-image: url(/images/mobilForsidepr%C3%B8ve.jpg);
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+#landingMain .subpages {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    justify-content: space-around;
+    padding: 10% 0;
+    flex: 1;
+}
+
+#landingMain .subpage {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#landingMain .subpages a {
+    /*Der ligges en baggrundsfarve på vores a tags og de styles*/
+    background-color: rgba(188, 206, 216, 0.7);
+    width: 80%;
+    padding: 15px;
+    font-family: "Baskervville", serif;
+    text-decoration: none;
+    font-size: 25px;
+    color: black;
+    display: flex;
+    justify-content: center;
+    border: 1px solid #f2cbd9;
+}
+
+/***********************************************/
+/********** stylesheet for salt fisk **************/
+
+/***********************************************/
+/********** stylesheet for om os ***************/
+
+
+/***********************************************/
 /********** stylesheet for footer **************/
 .footer {
     background-color: #39b54a;
@@ -150,7 +279,7 @@ header {
     background-size: 100%;
     justify-content: space-between;
     display: flex;
-}s
+}
 
 #textfooter {
     display: flex;
@@ -174,3 +303,28 @@ p {
     font-size: 14px;
 }
 
+
+/***********************************************/
+/********* mediaquery til tablet ***************/
+
+@media only screen and (min-width: 700px) {
+    /*Vi tilpasser gallery til tablet*/
+    .gallery {
+        padding: 80px;
+        align-items: flex-start;
+    }
+}
+
+/***********************************************/
+/********* mediaquery til web ******************/
+
+@media only screen and (min-width: 1200px) {
+    /*Vi tilpasser naven til tablet*/
+    #closeNav,
+    #openNav,
+    #logo,
+    #logoTop {
+        /*Disse funktioner vil vi ikke vise*/
+        display: none;
+    }
+}
