--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ main {
     list-style: none;
     padding: 0;
     margin-top: 30px;
-    color: #f2cbd9;
+    color: #e4717a;
     text-decoration: none;
     /*Flex bruges til at ligge links under hinanden og centere dem*/
     display: flex;
