--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,38 @@ label {
 
 /***********************************************/
 /********** stylesheet for om os ***************/
+.gallery {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
 
+#gallery1,
+#gallery2,
+#gallery3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#gallery1 img,
+#gallery2 img,
+#gallery3 img {
+    width: 100%;
+}
+
+#gallery1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#gallery2,
+#gallery3 {
+    display: none;
+}
 
 /***********************************************/
 /********** stylesheet for footer **************/
