--- a/css/style.css
+++ b/css/style.css
@@ -228,11 +228,26 @@ label {
 
 #landingHeader #logoTop {
     /*Logoet ligges ud over header (en del af det ønskede design)*/
-    position: absolute;
-    
+    position: absolute;  
 }
 
+#Saltefisk{
+    width: 100%;
+}
 
+#landingpagekonkurrence{
+    display: flex;
+justify-content: center;
+    font-size: 30px;
+    color: #e4717a;
+        
+}
+#Vindkurv{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    color: #e4717a;
+}
 /***********************************************/
 /********** stylesheet for salt fisk **************/
 
