--- a/css/style.css
+++ b/css/style.css
@@ -234,12 +234,33 @@ label {
 #Saltefisk{
     width: 100%;
 }
+#mainlanding{
+    position:relative;
+    
+}
+#læsmere{
+    position: absolute;
+    bottom: 40px;
+    left: 25%;
+    color: white;
+    font-size: 20px;
+    width: 50%;
+    text-align: center;
+}
+#deltageher{
+    display: flex;
+    color: #e4717a;
+    justify-content: center;
+    font-size: 20px;
+    margin-bottom: 75px;
+}
 
 #landingpagekonkurrence{
     display: flex;
 justify-content: center;
     font-size: 30px;
     color: #e4717a;
+    margin-bottom: 30px;
         
 }
 #Vindkurv{
@@ -247,6 +268,7 @@ justify-content: center;
     justify-content: center;
     font-size: 20px;
     color: #e4717a;
+    margin-bottom: 30px;
 }
 /***********************************************/
 /********** stylesheet for salt fisk **************/
