--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,9 @@ justify-content: center;
 
 /***********************************************/
 /********** stylesheet for om os ***************/
-
+#omos{
+    width: 100%;
+}
 
 /***********************************************/
 /********** stylesheet for footer **************/
