--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,21 @@ header {
 #menuPunkter #logoTopDesktop {
     display: none;
 }
+/***********************************************/
+/********* stylesheet for Om os **************/
+. Værdier{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+#værdierne{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    
+}
 
 /***********************************************/
 /********* stylesheet for kontakt **************/
@@ -271,10 +286,28 @@ justify-content: center;
     margin-bottom: 30px;
 }
 /***********************************************/
-/********** stylesheet for salt fisk **************/
+/********** stylesheet for konkurrence **************/
+#Konkurrence{
+    width: 100%;
+    margin-top: 40px;
+    
+}
 
+#vind{
+    margin-top: 40px;
+    font-size: 20px;
+    color: #e4717a;
+}
+
+#foratdeltage{
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    color: #e4717a;
+    margin-bottom: 30px;
+}
 /***********************************************/
-/********** stylesheet for om os ***************/
+/********** stylesheet for Salt fisk ***************/
 #omos{
     width: 100%;
     margin-bottom: 30px;
