--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,14 @@ header {
     
 }
 
+#omos{
+     display: flex;
+    justify-content: center;
+    font-size: 20px;
+    color: #e4717a;
+    margin-bottom: 30px;
+}
+
 /***********************************************/
 /********* stylesheet for kontakt **************/
 
@@ -359,10 +367,7 @@ p {
 
 @media only screen and (min-width: 700px) {
     /*Vi tilpasser gallery til tablet*/
-    .gallery {
-        padding: 80px;
-        align-items: flex-start;
-    }
+    
 }
 
 /***********************************************/
