--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ header {
      display: flex;
     justify-content: center;
     font-size: 20px;
-    color: #e4717a;
+    color: black;
     margin-bottom: 30px;
 }
 
@@ -272,7 +272,7 @@ label {
 }
 #deltageher{
     display: flex;
-    color: #e4717a;
+    color: black;
     justify-content: center;
     font-size: 20px;
     margin-bottom: 75px;
@@ -282,7 +282,7 @@ label {
     display: flex;
 justify-content: center;
     font-size: 30px;
-    color: #e4717a;
+    color: black;
     margin-bottom: 30px;
         
 }
@@ -290,7 +290,7 @@ justify-content: center;
     display: flex;
     justify-content: center;
     font-size: 20px;
-    color: #e4717a;
+    color: black;
     margin-bottom: 30px;
 }
 /***********************************************/
@@ -304,14 +304,14 @@ justify-content: center;
 #vind{
     margin-top: 40px;
     font-size: 20px;
-    color: #e4717a;
+    color: black;
 }
 
 #foratdeltage{
     display: flex;
     justify-content: center;
     font-size: 15px;
-    color: #e4717a;
+    color: black;
     margin-bottom: 30px;
 }
 /***********************************************/
@@ -324,7 +324,7 @@ justify-content: center;
     display: flex;
     justify-content: center;
     font-size: px;
-    color: #e4717a;
+    color: black;
     margin-bottom: 30px;
 }
 /***********************************************/
