--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ textarea {
     margin-top: 6px; /* Add a top margin */
     margin-bottom: 16px; /* Bottom margin */
     resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
-    border-color: #39b54a;
+    border-color: #83c760;
 
 }
 
@@ -223,7 +223,7 @@ textarea {
 /* Style the submit button with a specific background color etc */
 #contactButton {
     background-color: #e4717a;
-    color: black;
+    color: white;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
@@ -335,7 +335,7 @@ justify-content: center;
 /***********************************************/
 /********** stylesheet for footer **************/
 .footer {
-    background-color: #39b54a;
+    background-color: #83c760;
     padding: 10px 20px;
     text-align: left;
     background-size: 100%;
@@ -519,7 +519,7 @@ textarea {
     margin-top: 6px; /* Add a top margin */
     margin-bottom: 16px; /* Bottom margin */
     resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
-    border-color: #39b54a;
+    border-color: #83c760;
 }
 
 #indhold {
@@ -530,7 +530,7 @@ textarea {
 /* Style the submit button with a specific background color etc */
 #contactButton {
     background-color: #e4717a;
-    color: black;
+    color: white;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
