--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,10 @@ label {
        display: none;
     } 
     
-    
+    h1{
+        margin-top: 50px;
+
+    }
 }
 
 /***********************************************/
@@ -494,7 +497,7 @@ label {
         align-items: center;
         justify-content: space-around;
         flex-direction: row;
-        margin: 0;
+        margin-top: 50px;
     }
 
     #menuPunkter a {
@@ -555,15 +558,41 @@ label {
     #saltefiskweb{
         display: flex;
         width: 100%;
-        margin-top: 50px;
+        margin-top: 100px;
     }
     
-    
+    h1{
+        margin-top: 100px;
+        text-align: center;
+}
 #logoTop img,
 #logoTopDesktop img {
     width: 100%;
-    margin-bottom: 50px;
-    margin-top: 30px;
-}
+    margin-bottom: 100px;
+    margin-top: 10px;
+    align-content: center;
 
+}
+    /*Jeg tilpasse saltefisk img og teskt ind*/
+     #omos{
+        display: block;
+        width: 38%;
+    }
+
+    #omsaltefisk {
+        width: 40%;
+       
+    }
+
+    #omos{
+        background-image: none;
+        justify-content: space-around;
+        align-items: flex-start;
+        max-width: 1200px;
+        width: 70%;
+    }
+
+    #saltefiske {
+        align-items: center;
+    }
 }
